--- a/index.html
+++ b/index.html
@@ -5,23 +5,62 @@
     <meta charset="utf-8" />
     <title></title>
 
-    <link rel=".\styles\master.css" type="text/css"href="mystyle.css">
+    <link rel="stylesheet" type="text/css" href=".\styles\master.css">
 
 </head>
 <body>
-<div class="header">
+<div id="bgheader">
 
-<h1>Broadway Design</h1>
-<p>
-<ul>
-<li>Home</li>
-<li>Process</li>
-<li>Work</li>
-<li>Team</li>
-<li>Contact</li>
-</ul>
-</p>
+  <h1>Broadway Design</h1>
+
+    <p class="navlinks">
+      Home
+        <br /><br />
+      Process
+        <br /><br />
+      Work
+        <br /><br />
+      Team
+        <br /><br />
+      Contact
+    </p>
+
 
 </div>
+
+  <h2>Our Process</h2>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="identify">
+  <h3>Identity</h3>
+   <p>We focus on the most important details.</p>
+
+  <h3>Understand</h3>
+  <p>We study our project inside and out.</p>
+
+  <h3>Execute</h3>
+  <p>We put everything in our work</p>
+
+  <h2 id="bgheader" class="white">Designed in New York</h2>
+
+  <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+
+  <h3>Team</h3>
+    <p>We're Hiring!</p>
+
+  <h3>Contact</h3>
+  <p>Phone: (555)-555-5555</p>
+  <p>E-mail: test@example.com</p>
+  <p>Twitter: @test</p>
+
+  <div id="footer">
+<p>
+  &copy; Broadway 2018
+    <span class="navlinks">
+      Home About Work Team Contact
+    </span>
+</p>
+  </div>
+
+
 </body>
 </html>
