--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h1>Broadway Design</h1>
 
-    <p class="navlinks">
+    <p class="navlinks underline white">
       Home
         <br /><br />
       Process
@@ -33,9 +33,11 @@
   <h3>Identity</h3>
    <p>We focus on the most important details.</p>
 
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="understand">
   <h3>Understand</h3>
   <p>We study our project inside and out.</p>
 
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="execute">
   <h3>Execute</h3>
   <p>We put everything in our work</p>
 
@@ -55,7 +57,7 @@
   <div id="footer">
 <p>
   &copy; Broadway 2018
-    <span class="navlinks">
+    <span class="underline">
       Home About Work Team Contact
     </span>
 </p>
